@@ -919,6 +919,11 @@
 		</tr>
 
 		<tr>
+			<td><pre>-ssdelay &lt;delay&gt;</pre></td>
+			<td>Set the delay in seconds between taking snapshots in continuous snapshot mode (currently, 1 - 10).</td>
+		</tr>
+
+		<tr>
 			<td><pre>-rominfo &lt;rom&gt;</pre></td>
 			<td>Display detailed information about the given ROM, and then exit
 				Stella.</td>
@@ -2216,6 +2221,12 @@
 			<td>Toggle PAL color-loss effect</td>
 			<td>Control + l</td>
 			<td>Control + l</td>
+		</tr>
+
+		<tr>
+			<td>Save continuous PNG snapshots</td>
+			<td>Shift-F12</td>
+			<td>Shift-F12</td>
 		</tr>
 	</table>
 
